Closed
Bug 1656596
Opened 5 years ago
Closed 5 years ago
Crash in [@ WebProgressListenerToPromise::OnStateChange]
Categories
(Core :: Printing: Output, defect)
Tracking
()
RESOLVED
FIXED
81 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | fixed |
| firefox81 | --- | fixed |
People
(Reporter: u608768, Assigned: emilio)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-962d7f8b-72c4-4bbc-87d8-3f3f30200731.
Top 10 frames of crashing thread:
0 xul.dll WebProgressListenerToPromise::OnStateChange dom/base/nsFrameLoader.cpp:3131
1 xul.dll mozilla::layout::RemotePrintJobParent::RecvStateChange layout/printing/ipc/RemotePrintJobParent.cpp:198
2 xul.dll mozilla::layout::PRemotePrintJobParent::OnMessageReceived ipc/ipdl/PRemotePrintJobParent.cpp:345
3 xul.dll mozilla::dom::PContentParent::OnMessageReceived ipc/ipdl/PContentParent.cpp:6582
4 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2074
5 xul.dll mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1953
6 xul.dll mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:512
7 xul.dll mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:83:7'>::Run xpcom/threads/nsThreadUtils.h:577
8 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1234
9 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:87
Started in build 20200730215452. The assertion was added in bug 1655746.
Flags: needinfo?(emilio)
| Assignee | ||
Comment 1•5 years ago
|
||
This code needs fuzzing desperately...
Updated•5 years ago
|
Assignee: nobody → emilio
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•5 years ago
|
||
Comment on attachment 9167412 [details]
Bug 1656596 - Add another missing null-check in our printing code. r=jwatt
Beta/Release Uplift Approval Request
- User impact if declined: crashes while printing
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Adds a null-check. Bug 1655746 added an assertion, but this would crash before that as well.
- String changes made/needed: none
Flags: needinfo?(emilio)
Attachment #9167412 -
Flags: approval-mozilla-beta?
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/07803833e05c
Add another missing null-check in our printing code. r=nordzilla
Comment 4•5 years ago
|
||
Comment on attachment 9167412 [details]
Bug 1656596 - Add another missing null-check in our printing code. r=jwatt
crash fix, approved for 80.0b3
Attachment #9167412 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 5•5 years ago
|
||
| bugherder uplift | ||
status-firefox80:
--- → fixed
Comment 6•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Updated•5 years ago
|
status-firefox79:
--- → unaffected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•