Bug 1656596 - Add another missing null-check in our printing code. r=nordzilla, a=jcristau

This code needs fuzzing desperately...

Differential Revision: https://phabricator.services.mozilla.com/D85631